[package]
name = "rtos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1


[dependencies]
cortex-m-semihosting = "0.5.0"
cortex-m-interrupt = "0.2.0"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
