[package]
name = "Rosthern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.15.0"
features = ["stm32f405"]
